--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,72 @@
-binance
-ccxt
-schedule
-pytest
-black
-flake8
+aiodns==3.2.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+attrs==24.2.0
+binance==0.3
+black==24.10.0
+ccxt==4.4.18
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.0
+cryptography==43.0.1
+cycler==0.12.1
+dateparser==1.2.0
+emoji==2.14.0
+flake8==7.1.1
+fonttools==4.54.1
+frozenlist==1.4.1
+gevent==24.10.3
+greenlet==3.1.1
+idna==3.10
+iniconfig==2.0.0
+keyboard==0.13.5
+kiwisolver==1.4.7
+matplotlib==3.9.2
+mccabe==0.7.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+numpy==2.1.2
+packaging==24.1
+pandas==2.2.3
+pathspec==0.12.1
+patsy==0.5.6
+pillow==11.0.0
+platformdirs==4.3.6
+pluggy==1.5.0
+propcache==0.2.0
+pycares==4.4.0
+pycodestyle==2.12.1
+pycparser==2.22
+pycryptodome==3.21.0
+pyflakes==3.2.0
+pyparsing==3.2.0
+pytest==8.3.3
+python-binance==1.0.19
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+regex==2024.9.11
+requests==2.32.3
+schedule==1.2.2
+scipy==1.14.1
+setuptools==75.1.0
+six==1.16.0
+statsmodels==0.14.4
+tabulate==0.9.0
+termcolor==2.5.0
+tqdm==4.66.5
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+ujson==5.10.0
+urllib3==2.2.3
+websocket==0.2.1
+websocket-client==1.8.0
+websockets==13.1
+yarl==1.15.2
+zope.event==5.0
+zope.interface==7.1.1
